<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />

        <item
            android:id="@+id/nav_room"
            android:icon="@drawable/ic_rooms"
            android:title="@string/menu_rooms" />

        <item
            android:id="@+id/nav_calender"
            android:icon="@drawable/ic_calender"
            android:title="@string/menu_calender" />

        <item
            android:id="@+id/nav_facilities"
            android:icon="@drawable/ic_facilities"
            android:title="@string/menu_facilities" />

        <item
            android:id="@+id/nav_reservation"
            android:icon="@drawable/ic_reservation"
            android:title="Reservation" />


        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_location"
            android:title="Location" />


    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
